tests/typechecker/should_pass/true_false.csp
X = if true then false else true
