tests/typechecker/should_fail/true_false.csp
-- FDR aliases True/False to true/false
X = if True then False else true
